<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".soporteTecnico">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#008FEE"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:srcCompat="@mipmap/logo_foreground" />

    <TextView
        android:id="@+id/tvSoporte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/soporteTecnico"
        android:textSize="24sp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_below="@id/imageView6"/>

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:srcCompat="@android:drawable/sym_action_call"
        android:layout_below="@id/tvSoporte"/>

    <TextView
        android:id="@+id/tvTeleNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/numeroSuporte"
        android:layout_below="@id/imageView9"/>

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:srcCompat="@android:drawable/ic_menu_send"
        android:layout_below="@id/tvTeleNumber"/>

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/contestamosTodosLosDias"
        android:layout_below="@id/imageView10"/>

    <TextView
        android:id="@+id/tvFAQ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/FAQ"
        android:textSize="24sp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_below="@id/tvMessage"/>

    <TextView
        android:id="@+id/tvQuestion1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/miAplicacionNoSirve"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_below="@id/tvFAQ"/>

    <TextView
        android:id="@+id/tvAnswer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reinicieTelefono"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_below="@id/tvQuestion1"/>

    <TextView
        android:id="@+id/tvQuestio2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pantallaNegro"
        app:layout_constraintTop_toBottomOf="@+id/tvAnswer1"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_below="@id/tvAnswer1"/>

    <TextView
        android:id="@+id/tvAnswer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/contactenos"
        android:layout_below="@id/tvQuestio2"/>

</RelativeLayout>