<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".miembros">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageButton7"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="93dp"
        android:layout_marginBottom="86dp"
        android:layout_toEndOf="@+id/textView5"
        android:text="@string/quitarMiembro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_marginStart="59dp"
        android:layout_marginTop="110dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/imageButton7"
        app:layout_constraintHorizontal_bias="0.618"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/btn_plus" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="83dp"
        android:layout_marginTop="405dp"
        android:layout_marginEnd="60dp"
        android:text="@string/miembro"
        app:layout_constraintBottom_toTopOf="@+id/imageButton7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton4"
        app:layout_constraintVertical_bias="0.144" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="108dp"
        android:layout_marginTop="404dp"
        android:layout_marginEnd="96dp"
        android:text="@string/miembro"
        app:layout_constraintBottom_toTopOf="@+id/imageButton6"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3"
        app:layout_constraintVertical_bias="0.147" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="105dp"
        android:layout_marginTop="249dp"
        android:layout_marginEnd="107dp"
        android:layout_toEndOf="@+id/textView"
        android:text="@string/miembro"
        app:layout_constraintBottom_toTopOf="@+id/imageButton4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="89dp"
        android:layout_height="81dp"
        android:layout_below="@+id/imageView3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="71dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toStartOf="@+id/imageButton4"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="401dp"
        tools:srcCompat="@mipmap/ic_miembro_foreground" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="89dp"
        android:layout_height="81dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="63dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
        tools:srcCompat="@mipmap/ic_miembro_foreground" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="89dp"
        android:layout_height="81dp"
        android:layout_below="@+id/imageView3"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="71dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="91dp"
        android:layout_toEndOf="@+id/imageButton3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:srcCompat="@mipmap/ic_miembro_foreground" />

    //<ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#008FEE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-1dp"
        android:background="#008FEE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo_foreground" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="89dp"
        android:layout_height="81dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="68dp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton3"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@mipmap/ic_miembro_foreground" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="86dp"
        android:layout_marginTop="252dp"
        android:text="@string/miembro"
        app:layout_constraintBottom_toTopOf="@+id/imageButton3"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:layout_constraintVertical_bias="0.52" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="66dp"
        android:layout_height="60dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="82dp"
        android:layout_marginTop="113dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="16dp"
        android:layout_toEndOf="@+id/imageButton6"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_delete" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageButton6"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="58dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="88dp"
        android:text="@string/agregarMiembro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.607"
        app:layout_constraintStart_toStartOf="parent" />


</RelativeLayout>